[package]
name = "dedupy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
csv = "1.3.0"
eyre = "0.6.9"
rfd = "0.12.1"
ryu = "1.0.16"
seahash = "4.1.0"
serde = { version = "1.0.193", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
